# novel2script-agent-studio

./: .gitignore  README.md  README.zh-CN.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: llm.py  runs.py  schema.py
backend/app/core/: config.py
backend/app/domain/: chapter_parser.py  schemas.py  validators.py
backend/app/graph/: __init__.py  state.py  workflow.py
backend/app/services/: llm_client.py  run_store.py  schema_docs.py  tool_registry.py  yaml_exporter.py
backend/tests/: test_api.py  test_chapter_parser.py  test_run_store.py  test_validators.py  test_workflow.py
docs/: demo_script.md  final_demo_rehearsal.md  iteration_guidelines.md  pr_plan.md  schema.md  submission_checklist.md  submission_summary.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/workbench/: page.tsx
frontend/components/: ReportPanel.tsx  YamlEditor.tsx
frontend/lib/: api.ts
frontend/scripts/: start-backend.mjs  start-frontend.mjs
frontend/tests/: global-setup.ts  global-teardown.ts  landing.spec.ts  responsive.spec.ts  workbench-interactions.spec.ts  workbench.spec.ts
samples/: README.md  sample_adaptation_plan.json  sample_adaptation_plan.md  sample_adaptation_report.md  sample_script.json  sample_script.yaml  three_chapter_novel.txt
scripts/: check-submission-ready.ps1  check.ps1  set-demo-link.ps1  start-demo.ps1  stop-demo.ps1
